Rename quickstart vignette

--- a/vignettes/zementisr.Rmd
+++ b/vignettes/zementisr.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "zementisr Quickstart Guide"
 author: "Alexander Lemm"
-date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{zementisr Quickstart Guide}
@@ -10,11 +9,9 @@ vignette: >
 ---
 
 ```{r setup, include = FALSE}
-NOT_CRAN <- identical(tolower(Sys.getenv("NOT_CRAN")), "true")
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  purl = NOT_CRAN
+  comment = "#>"
 )
 ```
 
@@ -40,9 +37,9 @@ ZEMENTIS_pwd = "bigwhoop"
 
 ## Preparation
 
-Before we get started using the zementisr package, we will create two simple prediction models and convert them to PMML using `pmml()` from the pmml package. The first PMML model will be saved to disk: 
+Before we get started using the zementisr package, we will create two simple prediction models and convert them to PMML using `pmml()` from the [pmml package](https://cran.r-project.org/web/packages/pmml/index.html). The first PMML model will be saved to disk: 
 
-``` {r eval=NOT_CRAN}
+``` {r}
 library(rpart)
 library(pmml)
 
@@ -61,7 +58,7 @@ Now, we will start using functions from the zementisr package. We will begin wit
 
 `upload_model()` either accepts a path to a PMML file on disk or an `XMLNode` object created with `pmml::pmml()`. Below we will demonstrate both options to upload the two models to the server. A successful upload always returns a list with the model name and its activation status.
 
-```{r eval=NOT_CRAN}
+```{r}
 library(zementisr)
 
 upload_model("iris_pmml.xml")
@@ -73,26 +70,26 @@ upload_model(kyphosis_pmml)
 
 After deployment you might be interested in how many PMML models are currently deployed to Zementis Server:
 
-```{r eval=NOT_CRAN}
+```{r}
 get_models()
 ```
 
 Use `get_model_properties()` to get the PMML model's name, description, input and output field properties:
 
-```{r eval=NOT_CRAN}
+```{r}
 get_model_properties("kyphosis_model")
 ```
 
 If you like to deactivate a PMML model without removing it from the server, do the following:
 
-```{r eval=NOT_CRAN}
+```{r}
 deactivate_model("iris_model")
 deactivate_model("kyphosis_model")
 ```
 
 You even can add some `magrittr` and `purrr` flavor to chain several zementisr functions together. For instance, the following line of code lets you activate all your PMML models at once:
 
-```{r eval=NOT_CRAN}
+```{r}
 get_models() %>% purrr::map_df(activate_model)
 ```
 
@@ -105,28 +102,28 @@ If you like to predict a __single new input record__, use `apply_model()` which 
 
 * `outputs` A data frame containing the prediction results. The values returned depend on the type of prediction model being executed on the server. You can spot the difference between a regression and a classification model in the output below
 
-```{r eval=NOT_CRAN}
+```{r}
 apply_model(iris[42, ], "iris_model")
 apply_model(kyphosis[23, ], "kyphosis_model")
 ```
 
 If you like to predict a __multiple new input records__ all at once, use `apply_model_batch()` which accepts data frames, `.csv` and `.json` files as data input. `.csv` and `.json` files can even be sent in compressed format (`.zip` or `.gzip`).
 
-```{r eval=NOT_CRAN}
+```{r}
 apply_model_batch(iris[23:25, ], "iris_model")
 jsonlite::write_json(iris[23:25, ], "iris.json")
-apply_model_batch("iris.json", "iris_model",)
+apply_model_batch("iris.json", "iris_model")
 write.csv(iris[23:25, ], "iris.csv", row.names = FALSE)
 apply_model_batch("iris.csv","iris_model")
 ```
 
-As you can see by the output above, `apply_model_batch()` also returns a list with the two components `model` and `output`.
+As you can see by the output above, `apply_model_batch()` also returns a list with the two components `model` and `outputs`.
 
 ## Delete models
 
 After a PMML model has reached the end of its life cycle you might want to remove it from the server using `delete_model`() which always returns a character vector with the names of the models still residing deployed to the server:
 
-```{r eval=NOT_CRAN}
+```{r}
 delete_model("iris_model")
 delete_model("kyphosis_model")
 ```
