--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 [![Travis-CI Build Status](https://travis-ci.org/alex23lemm/zementisr.svg?branch=master)](https://travis-ci.org/alex23lemm/zementisr)
 
-zementisr is an R client for the Zementis Server API. Zementis Server is an execution engine for PMML models which also comes with model management capabilities. Using zementisr, data scientists can deploy PMML models, predict new values by sending data to the server and manage the entire PMML model life cycle without leaving their preferred R development environment.
+zementisr is an R client for the Zementis Server API. Zementis Server is an execution engine for PMML models which also comes with model management capabilities. Using zementisr, data scientists can deploy PMML models to Zementis Server, predict new values by sending data to the server and manage the entire PMML model life cycle without leaving their preferred R development environment.
 
 ## Installation
 
@@ -30,26 +30,33 @@ devtools::install_github("alex23lemm/zementisr")
 
 ## Usage
 
-zementisr deploys PMML models to Zementis Server and manages the model lifecycle. Here are some of the things you can do once you have converted your R prediction model to PMML: 
+zementisr deploys PMML models to Zementis Server and manages the model lifecycle. Below are some of the things you can do once you have converted your R prediction model to PMML.
 
-```{r}
-library(zementisr)
+Check out the [quickstart guide](https://alex23lemm.github.io/zementisr/articles/zementisr.html) and [the docs](https://alex23lemm.github.io/zementisr/reference/index.html) for further details.
+
+```{r message=FALSE}
+library(pmml)
 
 # Build a simple lm model and convert it to PMML
 iris_lm <- lm(Sepal.Length ~ ., data=iris)
-iris_pmml <- pmml::pmml(iris_lm, model.name = "iris_model")
+iris_pmml <- pmml(iris_lm, model.name = "iris_model")
 
+
+library(zementisr)
 
 # Deploy PMML model to Zementis Server
 upload_model(iris_pmml)
 
-# Get prediction for new value
+# Get prediction for new value from Zementis Server
 apply_model(iris[42, ], "iris_model")
 
+# Deactivate PMML model on Zementis Server
 deactivate_model("iris_model")
 
+# Activate PMML model on Zementis Server
 activate_model("iris_model")
 
+# Delete PMML model from Zementis Server
 delete_model("iris_model")
 ```
 
