--- a/inst/doc/model-metrics.Rmd
+++ b/inst/doc/model-metrics.Rmd
@@ -83,11 +83,11 @@ Next, we will send 500 new values to each model deployed on Zementis Server for 
 
 ```{r}
 index <- sample(1:dim(test_set_iris)[1], 500, replace = TRUE)
-iris_predictions <- apply_model_batch(test_set_iris[index, ], "iris_model")
+iris_predictions <- predict_pmml_batch(test_set_iris[index, ], "iris_model")
 head(iris_predictions$outputs, 4)
 
 index <- sample(1:dim(test_set_mtcars)[1], 500, replace = TRUE)
-mtcars_predictions <- apply_model_batch(test_set_mtcars[index, ], "mtcars_model")
+mtcars_predictions <- predict_pmml_batch(test_set_mtcars[index, ], "mtcars_model")
 head(mtcars_predictions$outputs, 4)
 ```
 
@@ -199,7 +199,7 @@ get_model_metrics("iris_model")
 The returned list above does not include the prediction metrics for the iris model since the model deactivation before completely reset these metrics. Not before new data for scoring is sent to the server, the prediction metrics will be included in the server's response:
 
 ```{r results="hide"}
-apply_model_batch(test_set_iris[1:5, ], "iris_model")
+predict_pmml_batch(test_set_iris[1:5, ], "iris_model")
 ```
 
 ```{r}
