--- a/vignettes/model-metrics.Rmd
+++ b/vignettes/model-metrics.Rmd
@@ -53,10 +53,10 @@ Now, we will convert both models to PMML and upload them to the server:
 library(pmml)
 library(zementisr)
 
-pmml(iris_cart, model.name = "iris_model") %>%
+pmml(iris_cart, model_name = "iris_model") %>%
   upload_model
 
-pmml(mtcars_lm, model.name = "mtcars_model") %>%
+pmml(mtcars_lm, model_name = "mtcars_model") %>%
   upload_model
 ```
 
