Remove quotes from environment variables

--- a/README.Rmd
+++ b/README.Rmd
@@ -71,8 +71,8 @@ The zementisr package requires that you store your secrets and the base URL of y
 Please, make sure to set the environment variables below in your `.Renviron` file before using functions from the zementisr package. You can easily edit `.Renviron` using `usethis::edit_r_environ()`.
 
 ``` {r eval=FALSE}
-ZEMENTIS_base_url = "[address]"
-ZEMENTIS_usr = "[your_username]"
-ZEMENTIS_pwd = "[your_password]"
+ZEMENTIS_base_url = [address]
+ZEMENTIS_usr = [your_username]
+ZEMENTIS_pwd = [your_password]
 
 ```
