--- a/vignettes/model-metrics.Rmd
+++ b/vignettes/model-metrics.Rmd
@@ -9,10 +9,13 @@ vignette: >
 ---
 
 ```{r setup, include = FALSE}
+NOT_CRAN <- identical(tolower(Sys.getenv("NOT_CRAN")), "true")
+
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  eval = nzchar(Sys.getenv("NOT_CRAN"))
+  purl = NOT_CRAN,
+  eval = NOT_CRAN
 )
 ```
 
